etc/iptables/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING_FORWARD - [0:0]
:LOGGING_INPUT - [0:0]
:LOGGING_OUTPUT - [0:0]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -j LOGGING_INPUT
-A FORWARD -j LOGGING_FORWARD
-A OUTPUT ! -o wg0 -m mark ! --mark 0xca6c -m addrtype ! --dst-type LOCAL -j REJECT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 7844 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 51820 -j ACCEPT
-A OUTPUT -j LOGGING_OUTPUT
-A LOGGING_FORWARD -m limit --limit 5/min -j LOG --log-prefix "[DROP(6) FWD] "
-A LOGGING_FORWARD -j DROP
-A LOGGING_INPUT -m limit --limit 5/min -j LOG --log-prefix "[DROP(6) IN] "
-A LOGGING_INPUT -j DROP
-A LOGGING_OUTPUT -m limit --limit 5/min -j LOG --log-prefix "[DROP(6) OUT] "
-A LOGGING_OUTPUT -j DROP
COMMIT
